--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -9,7 +9,7 @@
 */
 
 .card-image {
-  width: 300px;
+  width: 35vh;
   border-radius: 12px;
   box-shadow: 0 0 5px #2B2D42; 
 }
@@ -21,22 +21,24 @@ article {
   margin: 1.5rem;
 }
 
-h3, p {
-  font-family: Prompt;
-  font-weight: 300;
-  font-size: 1.5rem;
-  margin: 0;
-}
-
-p {
-  font-size: 1rem;
-}
-
 .card-details{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1rem;
+  width: 100%;
+}
+
+h3, p {
+  font-family: Prompt;
+  font-weight: 300;
+  font-size: 1.5rem;
+  width: 100%;
+  margin: 1rem 0 0;
+}
+
+p {
+  font-size: 1rem;
+  margin: 0;
 }
 
 h3:hover {
