--- a/src/Gallery/Gallery.css
+++ b/src/Gallery/Gallery.css
@@ -25,7 +25,7 @@ h2, h3 {
 
 .cards-container {
   display: grid;
-  grid-template-columns: repeat(3, 300fr);  
+  grid-template-columns: repeat(3, 25fr);  
 }
 
 h2 {
