--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 */
 
 * {
-  border: 1px solid Crimson;
+  /* border: 1px solid Crimson; */
 }
 
 html {
